# osdev-libstdc

./: .gitmodules  CMakeLists.txt  README.md  cctype.cpp  strerror.cpp  toolchain-i686-elf.cmake  vsnprintf.cpp
benchmarks/: CMakeLists.txt  spin_lock_benchmark_aligned.cpp  spin_ttas_vs_tas_bench.cpp
include/: abort.h  atomic.h  ctype.h  errno.h  malloc.h  printf.h  string.h  strings.h
include/arch/x86/asm/: barrier.h  cpu.h
include/dux/: spin_lock.h
include/libstdc/: cctype.h  cerrno.h  config.h  cstring.h  errno.h  printf.h  utils.h
include/posix/: posix_strings.h
posix/: posix_strings.cpp
src/: abort.cpp  cctype.cpp  cstring.cpp  malloc.cpp  strerror.cpp  vsnprintf.cpp
tests/: atomic_test.cpp  cstring_test.cpp  ctype_test.cpp  spin_lock_test.cpp  vsnprintf_test.cpp
